--- a/style.css
+++ b/style.css
@@ -1,1 +1,145 @@
+*{
+    margin: 0;
+    padding: 0;
+}
+body{
+    background: #e6ecf0;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 10px;
+    padding: 50px;
+}
+main{
+    max-width: 1024px;
+    margin: 0 auto;
+    
+    padding: 60px;
+    background: #fff;
+    box-sizing: border-box;
+    box-shadow: 0 1px 3px 0 rgba(0,0,0,0.25);
+}
+.wrapper-contact{
+    display: flex;
+    justify-content: space-between;
+   
+}
+.contact-container{
+    width: 70%;
+}
+h1{
+    font-size: 1.9rem !important;
+    font-weight: 700;
+    font-family: "Arimo";
+}
+.contact-container h2{
+    font-size: 1.1rem !important;
+    font-weight: 400;
+    margin: 10px 0;
+    font-family: "Arimo";
+    color: #252932;
+}
+.contact-data{
+    display: flex;
+    font-size: 0.8rem;
+    line-height: 2.2em;
+    margin-top: 30px;
+    
+}
+.contact-data-column{
+    width: 50%;
+}
+.contact-data-column ul{
+    list-style: none;
+}
+.contact-data-column span{
+    font-weight: 600;
+ 
+}
+.my-photo{
+    min-width: 200px;
+    min-height: 200px;
+    background: url(./img/IMG_2291.png) 0 40% no-repeat;
+}
+.wrapper-summary{
+    margin: 50px 0;
+    font-size: 0.8rem; 
+    line-height: 1.7em;
+}
+.summary p{
+    margin: 30px 0;
+}
+.wrapper-skills{
+    margin: 50px 0;
+    font-size: 0.8rem; 
+    line-height: 3.7em;
+}
+.skills{
+    display: flex;
+}
+.skills-column{
+    width: 50%;
+    text-align: left;
+    margin-left: 10%;
+    
+}
+.skills-column ul{
+    list-style: none;
+}
 
+.row-container{
+    width: 100%;
+    height: 11px;
+    background: #d5d6d6;
+    margin-bottom: 36px;
+}
+.row-container:first-child{
+    margin-top: 18px;
+}
+.skills-row{
+    background: #252932;
+    height: 100%;
+}
+.html-css{
+    width: 80%;
+}
+.js-jq{
+    width: 50%;
+}
+.git{
+    width: 80%;
+}
+.npm{
+    width: 50%;
+}
+.glp-wbp{
+    width: 50%;
+}
+.a-vs{
+    width: 70%;
+}
+.eng{
+    width: 10%;
+}
+.wrapper-experiense{
+    font-size: 0.8rem; 
+    line-height: 2.7em;
+}
+.wrapper-experiense a{
+    text-decoration: none;
+    color: #0366d6
+}
+.wrapper-education{
+    margin: 50px 0;
+    font-size: 0.8rem; 
+    line-height: 1.7em;
+}
+.education{
+    display: flex;
+    align-items: center;
+    margin-top:30px;
+}
+.education-year-column{
+    min-width: 20%;
+}
+.education-text-column{
+    margin-left: 10px;
+}
