--- a/style.css
+++ b/style.css
@@ -10,9 +10,10 @@ body{
 }
 main{
     max-width: 1024px;
+    min-width:760px;
     margin: 0 auto;
-    
-    padding: 60px;
+    margin-top: 60px;
+    margin-bottom: 60px;
     background: #fff;
     box-sizing: border-box;
     box-shadow: 0 1px 3px 0 rgba(0,0,0,0.25);
