--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ main{
     margin: 0 auto;
     margin-top: 60px;
     margin-bottom: 60px;
+    padding: 60px;
     background: #fff;
     box-sizing: border-box;
     box-shadow: 0 1px 3px 0 rgba(0,0,0,0.25);
